# nanoGPT

./: .gitignore  pyproject.toml  train.py
config/: train_shakespeare_char_0.14m.py  train_shakespeare_char_0.28m.py  train_shakespeare_char_0.56m.py  train_warandpeace.py  train_warandpeace_0.1m.py  train_warandpeace_0.2m.py  train_warandpeace_0.4m.py  train_warandpeace_0.8m.py  train_warandpeace_1.6m.py
data/shakespeare_char_0.14m/: prepare.py
data/shakespeare_char_0.28m/: prepare.py
data/shakespeare_char_0.56m/: prepare.py
data/warandpeace/: prepare.py
data/warandpeace_0.1m/: prepare.py
data/warandpeace_0.2m/: prepare.py
data/warandpeace_0.4m/: prepare.py
data/warandpeace_0.8m/: prepare.py
data/warandpeace_1.6m/: prepare.py
examples/: classifier_finetune.ipynb  language_modeling.ipynb
