[tool.poetry]
name = "nanogptdemo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
torch = "^2.1.0"
numpy = "^1.26.1"
transformers = "^4.35.0"
datasets = "^2.14.6"
tiktoken = "^0.5.1"
wandb = "^0.16.0"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
